--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .main-screen {
   display: flex;
+  flex-direction: column;
   height: 100vh;
   width: 100vw;
   text-align: center;
 }
 
-.left-side {
+/* .left-side {
   padding: 20px;
   width: 50%;
 }
@@ -13,31 +14,55 @@
 .right-side {
   padding: 20px;
   width: 50%;
+} */
+
+.top{
+  display: flex;
+  flex-wrap: wrap;
+  height: calc(35% - 20px);
+}
+
+.bottom{
+  display: flex;
+  height: calc(65% - 20px);
+  flex-wrap: wrap;
 }
 
 .top-right {
-  height: 25%;
+  padding: 20px;
+  width: 45%;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .bottom-right {
   text-align: left;
-  overflow-Y: scroll;
-  height: 75%;
+  overflow-y: scroll;
+  width: 45%;
+  height: 100%;
+  padding: 20px;
 }
 
 .top-left {
-  height: 20%;
+  padding: 20px;
+  width: 45%;
 }
 
-.links {}
+/* .links {} */
 
 .bottom-left {
   text-align: left;
-  height: 80%;
+  /* height: 80%; */
+  width: 45%;
+  padding: 20px;
 }
 
 .projects {
   display: flex;
   overflow-X: scroll;
   height: 95%;
+}
+
+hr{
+  margin: 15px;
 }
